Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Go/DriverExamples/wrappers/AstroFuncDll.h


int AstroFuncInit(long apAddr);
void AstroFuncGetInfo(char infoStr[128]);
void KepToEqnx(double xa_kep[6], double xa_eqnx[6]);
void KepToPosVel(double xa_kep[6], double pos[3], double vel[3]);
void KepToUVW(double xa_kep[6], double uBar[3], double vBar[3], double wBar[3]);
void ClassToEqnx(double xa_cls[6], double xa_eqnx[6]);
void EqnxToClass(double xa_eqnx[6], double xa_cls[6]);
void EqnxToKep(double xa_eqnx[6], double xa_kep[6]);
void EqnxToPosVel(double xa_eqnx[6], double pos[3], double vel[3]);
void PosVelToEqnx(double pos[3], double vel[3], double xa_eqnx[6]);
void PosVelMuToEqnx(double pos[3], double vel[3], double mu, double xa_eqnx[6]);
void PosVelToKep(double pos[3], double vel[3], double xa_kep[6]);
void PosVelMuToKep(double pos[3], double vel[3], double mu, double xa_kep[6]);
void PosVelToUUVW(double pos[3], double vel[3], double uvec[3], double vVec[3], double wVec[3]);
void PosVelToPTW(double pos[3], double vel[3], double uvec[3], double vVec[3], double wVec[3]);
double SolveKepEqtn(double xa_kep[6]);
double CompTrueAnomaly(double xa_kep[6]);
double NToA(double n);
double AToN(double a);
double KozaiToBrouwer(double eccen, double incli, double nKozai);
double BrouwerToKozai(double eccen, double incli, double nBrouwer);
void KepOscToMean(double xa_OscKep[6], double xa_MeanKep[6]);
void XYZToLLH(double thetaG, double metricPos[3], double metricLLH[3]);
void XYZToLLHTime(double ds50UTC, double metricPos[3], double metricLLH[3]);
void LLHToXYZ(double thetaG, double metricLLH[3], double metricXYZ[3]);
void LLHToXYZTime(double ds50UTC, double metricLLH[3], double metricXYZ[3]);
void EFGToECI(double thetaG, double posEFG[3], double velEFG[3], double posECI[3], double velECI[3]);
void EFGToECITime(double ds50UTC, double posEFG[3], double velEFG[3], double posECI[3], double velECI[3]);
void ECIToEFG(double thetaG, double posECI[3], double velECI[3], double posEFG[3], double velEFG[3]);
void ECIToEFGTime(double ds50UTC, double posECI[3], double velECI[3], double posEFG[3], double velEFG[3]);
void ECRToEFG(double polarX, double polarY, double posECR[3], double velECR[3], double posEFG[3], double velEFG[3]);
void ECRToEFGTime(double ds50UTC, double posECR[3], double velECR[3], double posEFG[3], double velEFG[3]);
void EFGToECR(double polarX, double polarY, double posEFG[3], double velEFG[3], double posECR[3], double velECR[3]);
void EFGToECRTime(double ds50UTC, double posEFG[3], double velEFG[3], double posECR[3], double velECR[3]);
void EFGPosToLLH(double posEFG[3], double metricLLH[3]);
void LLHToEFGPos(double metricLLH[3], double posEFG[3]);
void RotJ2KToDate(int spectr, int nutationTerms, double ds50TAI, double posJ2K[3], double velJ2K[3], double posDate[3], double velDate[3]);
void RotDateToJ2K(int spectr, int nutationTerms, double ds50TAI, double posDate[3], double velDate[3], double posJ2K[3], double velJ2K[3]);
void CompSunMoonPos(double ds50ET, double uvecSun[3], double* sunVecMag, double uvecMoon[3], double* moonVecMag);
void CompSunPos(double ds50ET, double uvecSun[3], double* sunVecMag);
void CompMoonPos(double ds50ET, double uvecMoon[3], double* moonVecMag);
void AstroConvFrTo(int xf_Conv, double frArr[128], double toArr[128]);
void RADecToLAD(double ra, double dec, double l[3], double a_tilde[3], double d_tilde[3]);
void AzElToLAD(double az, double el, double lh[3], double ah[3], double dh[3]);
void ECIToTopoComps(double theta, double lat, double senPos[3], double satPos[3], double satVel[3], double xa_topo[10]);
void RaDecToAzEl(double thetaG, double lat, double lon, double ra, double dec, double* az, double* el);
void RaDecToAzElTime(double ds50UTC, double lat, double lon, double ra, double dec, double* az, double* el);
void AzElToRaDec(double thetaG, double lat, double lon, double az, double el, double* ra, double* dec);
void AzElToRaDecTime(double ds50UTC, double lat, double lon, double az, double el, double* ra, double* dec);
void RAEToECI(double theta, double astroLat, double xa_rae[6], double senPos[3], double satPos[3], double satVel[3]);
void GetInitialDrag(double semiMajorAxis, double eccen, double* nDot, double* bstar);
void CovMtxPTWToUVW(double pos[3], double vel[3], double ptwCovMtx[6][6], double uvwCovMtx[6][6]);
void CovMtxUVWToPTW(double pos[3], double vel[3], double uvwCovMtx[6][6], double ptwCovMtx[6][6]);
void EarthObstructionAngles(double earthLimb, double satECI[3], double senECI[3], double* earthSenLimb, double* earthSenSat, double* satEarthSen);
int IsPointSunlit(double ds50ET, double ptEci[3]);
void RotRADecl(int nutationTerms, int dir, double ds50UTCIn, double raIn, double declIn, double ds50UTCOut, double* raOut, double* declOut);
int RotRADec_DateToEqnx(int nutationTerms, int yrOfEqnx, double ds50UTCIn, double raIn, double declIn, double* raOut, double* declOut);
int RotRADec_EqnxToDate(int nutationTerms, int yrOfEqnx, double ds50UTCIn, double raIn, double declIn, double* raOut, double* declOut);
void CovMtxEqnxToUVW(double pos[3], double vel[3], double covMtxEqnx[6][6], double covMtxUVW[6][6]);
void CovMtxUVWToEqnx(double pos[3], double vel[3], double covMtxUVW[6][6], double covMtxEqnx[6][6]);
void CovMtxECIToUVW(double pos[3], double vel[3], double covMtxECI[6][6], double covMtxUVW[6][6]);
void CovMtxUVWToECI(double pos[3], double vel[3], double covMtxUVW[6][6], double covMtxECI[6][6]);
void CovMtxECIToEFG(double thetaG, double covECI[6][6], double covEFG[6][6]);
void CovMtxEFGToECI(double thetaG, double covEFG[6][6], double covECI[6][6]);
void Mtx6x6ToLTA21(double symMtx6x6[6][6], double lta21[21]);
void LTA21ToMtx6x6(double lta21[21], double symMtx6x6[6][6]);
void Mtx9x9ToLTA45(double symMtx9x9[9][9], double lta45[45]);
void LTA45ToMtx9x9(double lta45[45], double symMtx9x9[9][9]);
void PropCovFrState(double rms, double consider, double stateArray[54], double cov[9][9], double propCov[6][6]);
void CovMtxECIToEqnx(double pos[3], double vel[3], double covMtxECI[9][9], double covMtxEqnx[9][9]);
void CovMtxEqnxToECI9x9(double pos[3], double vel[3], double covEqnx[9][9], double covMtxECI[9][9]);
void CovMtxEqnxToUVW9x9(double pos[3], double vel[3], double covEqnx[9][9], double covMtxUVW[9][9]);
void CovMtxUpdate(double rmsIn, double consider, double cov[9][9], double stateArray[54], double propCov[6][6]);
void AberrationAnnual(double ra, double decl, double dS50UTC, double* raDelta, double* decDelta);
void AberrationDiurnal(double ra, double decl, double dS50UTC, double senPos[3], double* raDelta, double* decDelta);
void JplSetParameters(char jplFile[512], double ds50Start, double ds50Stop);
void JplGetParameters(char jplFile[512], double* ds50Start, double* ds50Stop);
void JplReset();
void JplCompSunMoonVec(double ds50UTC, double uvecSun[3], double* sunVecMag, double uvecMoon[3], double* moonVecMag);
void JplCompSunMoonPos(double ds50UTC, double sunVec[3], double moonVec[3]);
void RemoveJpl();
void TemeEpochToDate(int nutationTerms, double epochDs50TAI, double dateDs50TAI, double posEpoch[3], double velEpoch[3], double posDate[3], double velDate[3]);
#define XA_KEP_A        0
#define XA_KEP_E        1
#define XA_KEP_INCLI    2
#define XA_KEP_MA       3
#define XA_KEP_NODE     4
#define XA_KEP_OMEGA    5
#define XA_KEP_SIZE    6
#define XA_CLS_N        0
#define XA_CLS_E        1
#define XA_CLS_INCLI    2
#define XA_CLS_MA       3
#define XA_CLS_NODE     4
#define XA_CLS_OMEGA    5
#define XA_CLS_SIZE     6
#define XA_EQNX_AF      0
#define XA_EQNX_AG      1
#define XA_EQNX_CHI     2
#define XA_EQNX_PSI     3
#define XA_EQNX_L       4
#define XA_EQNX_N       5
#define XA_EQNX_SIZE    6
#define XF_CONV_SGP42SGP  101
#define XA_TOPO_RA     0
#define XA_TOPO_DEC    1
#define XA_TOPO_AZ     2
#define XA_TOPO_EL     3
#define XA_TOPO_RANGE  4
#define XA_TOPO_RADOT  5
#define XA_TOPO_DECDOT 6
#define XA_TOPO_AZDOT  7
#define XA_TOPO_ELDOT  8
#define XA_TOPO_RANGEDOT  9
#define XA_TOPO_SIZE   10
#define XA_RAE_RANGE    0
#define XA_RAE_AZ       1
#define XA_RAE_EL       2
#define XA_RAE_RANGEDOT 3
#define XA_RAE_AZDOT    4
#define XA_RAE_ELDOT    5
#define XA_RAE_SIZE     6
#define YROFEQNX_OBTIME  0
#define YROFEQNX_CURR    1
#define YROFEQNX_2000    2
#define YROFEQNX_1950    3