Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Julia/wrappers/AstroFuncDll.jl

# This wrapper file was generated automatically by the GenDllWrappers program.
module AstroFuncDll

if Sys.iswindows()
  libname="AstroFunc"
else
  libname="libastrofunc"
end

# Export Constant Variables
export XA_KEP_A
export XA_KEP_E
export XA_KEP_INCLI
export XA_KEP_MA
export XA_KEP_NODE
export XA_KEP_OMEGA
export XA_KEP_SIZE
export XA_CLS_N
export XA_CLS_E
export XA_CLS_INCLI
export XA_CLS_MA
export XA_CLS_NODE
export XA_CLS_OMEGA
export XA_CLS_SIZE
export XA_EQNX_AF
export XA_EQNX_AG
export XA_EQNX_CHI
export XA_EQNX_PSI
export XA_EQNX_L
export XA_EQNX_N
export XA_EQNX_SIZE
export XF_CONV_SGP42SGP
export XA_TOPO_RA
export XA_TOPO_DEC
export XA_TOPO_AZ
export XA_TOPO_EL
export XA_TOPO_RANGE
export XA_TOPO_RADOT
export XA_TOPO_DECDOT
export XA_TOPO_AZDOT
export XA_TOPO_ELDOT
export XA_TOPO_RANGEDOT
export XA_TOPO_SIZE
export XA_RAE_RANGE
export XA_RAE_AZ
export XA_RAE_EL
export XA_RAE_RANGEDOT
export XA_RAE_AZDOT
export XA_RAE_ELDOT
export XA_RAE_SIZE
export YROFEQNX_OBTIME
export YROFEQNX_CURR
export YROFEQNX_2000
export YROFEQNX_1950

# Export Functions
export AstroFuncInit
export AstroFuncGetInfo
export KepToEqnx
export KepToPosVel
export KepToUVW
export ClassToEqnx
export EqnxToClass
export EqnxToKep
export EqnxToPosVel
export PosVelToEqnx
export PosVelMuToEqnx
export PosVelToKep
export PosVelMuToKep
export PosVelToUUVW
export PosVelToPTW
export SolveKepEqtn
export CompTrueAnomaly
export NToA
export AToN
export KozaiToBrouwer
export BrouwerToKozai
export KepOscToMean
export XYZToLLH
export XYZToLLHTime
export LLHToXYZ
export LLHToXYZTime
export EFGToECI
export EFGToECITime
export ECIToEFG
export ECIToEFGTime
export ECRToEFG
export ECRToEFGTime
export EFGToECR
export EFGToECRTime
export EFGPosToLLH
export LLHToEFGPos
export RotJ2KToDate
export RotDateToJ2K
export CompSunMoonPos
export CompSunPos
export CompMoonPos
export AstroConvFrTo
export RADecToLAD
export AzElToLAD
export ECIToTopoComps
export RaDecToAzEl
export RaDecToAzElTime
export AzElToRaDec
export AzElToRaDecTime
export RAEToECI
export GetInitialDrag
export CovMtxPTWToUVW
export CovMtxUVWToPTW
export EarthObstructionAngles
export IsPointSunlit
export RotRADecl
export RotRADec_DateToEqnx
export RotRADec_EqnxToDate
export CovMtxEqnxToUVW
export CovMtxUVWToEqnx
export CovMtxECIToUVW
export CovMtxUVWToECI
export CovMtxECIToEFG
export CovMtxEFGToECI
export Mtx6x6ToLTA21
export LTA21ToMtx6x6
export Mtx9x9ToLTA45
export LTA45ToMtx9x9
export PropCovFrState
export CovMtxECIToEqnx
export CovMtxEqnxToECI9x9
export CovMtxEqnxToUVW9x9
export CovMtxUpdate
export AberrationAnnual
export AberrationDiurnal
export JplSetParameters
export JplGetParameters
export JplReset
export JplCompSunMoonVec
export JplCompSunMoonPos
export RemoveJpl
export TemeEpochToDate

# Index of Keplerian elements
# semi-major axis (km)
const XA_KEP_A     =   0;

# eccentricity (unitless)
const XA_KEP_E     =   1;

# inclination (deg)
const XA_KEP_INCLI =   2;

# mean anomaly (deg)
const XA_KEP_MA    =   3;

# right ascension of the asending node (deg)
const XA_KEP_NODE  =   4;

# argument of perigee (deg)
const XA_KEP_OMEGA =   5;

const    XA_KEP_SIZE  =  6;   

# Index of classical elements
# N mean motion (revs/day)
const XA_CLS_N     =   0;

# eccentricity (unitless)
const XA_CLS_E     =   1;

# inclination (deg)
const XA_CLS_INCLI =   2;

# mean anomaly (deg)
const XA_CLS_MA    =   3;

# right ascension of the asending node (deg)
const XA_CLS_NODE  =   4;

# argument of perigee (deg)
const XA_CLS_OMEGA =   5;

const    XA_CLS_SIZE  =   6;

# Index of equinoctial elements
# Af (unitless)
const XA_EQNX_AF   =   0;

# Ag (unitless)
const XA_EQNX_AG   =   1;

# chi (unitless)
const XA_EQNX_CHI  =   2;

# psi (unitless)
const XA_EQNX_PSI  =   3;

# L mean longitude (deg)
const XA_EQNX_L    =   4;

# N mean motion (revs/day)
const XA_EQNX_N    =   5;

const    XA_EQNX_SIZE =   6;

# Indexes of AstroConvFrTo
# SGP4 (A, E, Incli, BStar) to SGP (nDot, n2Dot)
const XF_CONV_SGP42SGP = 101;



# Indexes for topocentric components
# Right ascension (deg)
const XA_TOPO_RA    = 0;

# Declination (deg)
const XA_TOPO_DEC   = 1;

# Azimuth (deg)
const XA_TOPO_AZ    = 2;

# Elevation (deg)
const XA_TOPO_EL    = 3;

# Range (km)
const XA_TOPO_RANGE = 4;

# Right ascension dot (deg/s)
const XA_TOPO_RADOT = 5;

# Declincation dot (deg/s)
const XA_TOPO_DECDOT= 6;

# Azimuth dot (deg/s)
const XA_TOPO_AZDOT = 7;

# Elevation dot (deg/s)
const XA_TOPO_ELDOT = 8;

# Range dot (km/s)
const XA_TOPO_RANGEDOT = 9;

const    XA_TOPO_SIZE  = 10;   


# Indexes for RAE components
# Range (km)
const XA_RAE_RANGE   = 0;

# Azimuth (deg)
const XA_RAE_AZ      = 1;

# Elevation (deg)
const XA_RAE_EL      = 2;

# Range dot (km/s)
const XA_RAE_RANGEDOT= 3;

# Azimuth dot (deg/s)
const XA_RAE_AZDOT   = 4;

# Elevation dot (deg/s)
const XA_RAE_ELDOT   = 5;

const    XA_RAE_SIZE    = 6;


# Year of Equinox indicator
# Date of observation
const YROFEQNX_OBTIME = 0;

# 0 Jan of Date
const YROFEQNX_CURR   = 1;

# J2000
const YROFEQNX_2000   = 2;

# B1950
const YROFEQNX_1950   = 3;



#Interface for the functions

# Notes: This function has been deprecated since v9.0. 
# Initializes AstroFunc DLL for use in the program.
# If this function returns an error, it is recommended that you stop the program immediately.
# 
# An error will occur if you forget to load and initialize all the prerequisite DLLs, as listed in the DLL Prerequisites section of the accompanying documentation, before using this DLL.
function AstroFuncInit(apAddr)
   errCode = ccall( (:AstroFuncInit,libname) 
     , Int32
     , (Int64,)
     , apAddr)
   return errCode
end

#############################################################################
# Retrieves information about the current version of AstroFunc.dll. The information is placed in the string parameter you pass in.
# The returned string provides information about the version number, build date, and platform.
function AstroFuncGetInfo()
   infoStr = " "^128
   ccall( (:AstroFuncGetInfo,libname) 
     , Nothing
     , (Cstring,)
     , infoStr)
   return infoStr
end

#############################################################################
# Converts a set of Keplerian elements to a set of equinoctial elements. 
function KepToEqnx(xa_kep)
   xa_eqnx = zeros(Float64, 6)
   ccall( (:KepToEqnx,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64})
     , xa_kep,xa_eqnx)
   return xa_eqnx
end

#############################################################################
# Converts a set of osculating Keplerian elements to osculating position and velocity vectors.
function KepToPosVel(xa_kep)
   pos = zeros(Float64, 3)
   vel = zeros(Float64, 3)
   ccall( (:KepToPosVel,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , xa_kep,pos,vel)
   return pos, vel
end

#############################################################################
# Converts a set of Keplerian elements to Ubar, Vbar, and Wbar vectors.
function KepToUVW(xa_kep)
   uBar = zeros(Float64, 3)
   vBar = zeros(Float64, 3)
   wBar = zeros(Float64, 3)
   ccall( (:KepToUVW,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , xa_kep,uBar,vBar,wBar)
   return uBar, vBar, wBar
end

#############################################################################
# Converts a set of classical elements to a set of equinoctial elements. 
function ClassToEqnx(xa_cls)
   xa_eqnx = zeros(Float64, 6)
   ccall( (:ClassToEqnx,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64})
     , xa_cls,xa_eqnx)
   return xa_eqnx
end

#############################################################################
# Converts a set of equinoctial elements to a set of classical elements.
function EqnxToClass(xa_eqnx)
   xa_cls = zeros(Float64, 6)
   ccall( (:EqnxToClass,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64})
     , xa_eqnx,xa_cls)
   return xa_cls
end

#############################################################################
# Converts a set of equinoctial elements to a set of Keplerian elements. 
function EqnxToKep(xa_eqnx)
   xa_kep = zeros(Float64, 6)
   ccall( (:EqnxToKep,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64})
     , xa_eqnx,xa_kep)
   return xa_kep
end

#############################################################################
# Converts a set of equinoctial elements to position and velocity vectors.
function EqnxToPosVel(xa_eqnx)
   pos = zeros(Float64, 3)
   vel = zeros(Float64, 3)
   ccall( (:EqnxToPosVel,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , xa_eqnx,pos,vel)
   return pos, vel
end

#############################################################################
# Converts position and velocity vectors to a set of equinoctial elements.
function PosVelToEqnx(pos, vel)
   xa_eqnx = zeros(Float64, 6)
   ccall( (:PosVelToEqnx,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , pos,vel,xa_eqnx)
   return xa_eqnx
end

#############################################################################
# Converts position and velocity vectors to a set of equinoctial elements with the given mu value. 
# This function is used when working with the SP propagator to get a more accurate set of equinoctial elements.
function PosVelMuToEqnx(pos, vel, mu)
   xa_eqnx = zeros(Float64, 6)
   ccall( (:PosVelMuToEqnx,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Float64
     , Ref{Float64})
     , pos,vel,mu,xa_eqnx)
   return xa_eqnx
end

#############################################################################
# Converts osculating position and velocity vectors to a set of osculating Keplerian elements.
function PosVelToKep(pos, vel)
   xa_kep = zeros(Float64, 6)
   ccall( (:PosVelToKep,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , pos,vel,xa_kep)
   return xa_kep
end

#############################################################################
# Converts osculating position and velocity vectors to a set of osculating Keplerian elements with the given value of mu.
# This function is used when working with the SP propagator to get a more accurate set of Keplerian elements.
function PosVelMuToKep(pos, vel, mu)
   xa_kep = zeros(Float64, 6)
   ccall( (:PosVelMuToKep,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Float64
     , Ref{Float64})
     , pos,vel,mu,xa_kep)
   return xa_kep
end

#############################################################################
# Converts position and velocity vectors to U, V, W vectors. See the remarks section for details.
# The resulting vectors have the following meanings.
# U vector: along radial direction
# V vector: W x U
# W vector: pos x vel
function PosVelToUUVW(pos, vel)
   uvec = zeros(Float64, 3)
   vVec = zeros(Float64, 3)
   wVec = zeros(Float64, 3)
   ccall( (:PosVelToUUVW,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , pos,vel,uvec,vVec,wVec)
   return uvec, vVec, wVec
end

#############################################################################
# Converts position and velocity vectors to U, V, W vectors. See the remarks section for details.
# The resulting vectors have the following meanings.
# U vector: V x W
# V vector: along velocity direction
# W vector: pos x vel
function PosVelToPTW(pos, vel)
   uvec = zeros(Float64, 3)
   vVec = zeros(Float64, 3)
   wVec = zeros(Float64, 3)
   ccall( (:PosVelToPTW,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , pos,vel,uvec,vVec,wVec)
   return uvec, vVec, wVec
end
